--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     },
     "require-dev": {
         "cache/integration-tests": "^0.16.0",
-        "phpunit/phpunit": "^5.7"
+        "phpunit/phpunit": "^5.7",
+        "satooshi/php-coveralls": "^2.0"
     },
     "autoload": {
         "psr-4": {
