--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,26 @@
 {
-    "name": "rapidwebltd/rw-file-cache-psr-6",
+    "name": "divineomega/do-file-cache-psr-6",
     "description": "PSR-6 adapter for RW File Cache",
     "type": "library",
     "authors": [
         {
             "name": "Jordan Hall",
-            "email": "jordan.hall@rapidweb.biz"
+            "email": "jordan@hall05.co.uk"
         }
     ],
     "license": "LGPL-3.0-only",
     "require": {
-        "rapidwebltd/rw-file-cache": "^1.2.3",
+        "divineomega/do-file-cache": "^2.0.0",
         "psr/cache": "^1.0"
     },
     "require-dev": {
         "cache/integration-tests": "^0.16.0",
         "phpunit/phpunit": "^5.7",
-        "satooshi/php-coveralls": "^2.0"
+        "php-coveralls/php-coveralls": "^2.1"
     },
     "autoload": {
         "psr-4": {
-            "rapidweb\\RWFileCachePSR6\\": "src/"
+            "DivineOmega\\DOFileCachePSR6\\": "src/"
         }
     }
 }
